tests/error/type_errors/unpack_generic_size2.py
from guppylang import guppy
from guppylang.std.builtins import array


n = guppy.nat_var("n")


@guppy
def foo(_xs: array[int, n]) -> int:
    a, *bs = range(n)
    return a


guppy.compile(foo)
